2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/xiao-haizi-guai-guai.ly: move file back.

2005-05-30  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/advanced.itely, converters.itely,
	instrument-notation.itely, lilypond-book.itely: misc small
	changes.

2005-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin: Update from mingw patches.

	* scm/editor.scm (editor-command-template-alist): Use jedit
	-reuseview (Bertalan), add uedit (Patrick Huberts).

	* input/xiao-hai-zi-guai-guai.ly: Rename from
	xiao-haizi-guai-guai.ly.

	* input/*: Reindent, do not use TAB.

	* Documentation/pictures/ly.xpm: Bugfix: do not anti-alias against
	white background.

2005-05-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-ps.scm (dump-stencil-as-EPS): Add silly fix for
	numerical overflow error.

2005-05-29 Laura Conrad <lconrad@laymusic.org>
	
	* abc2ly.py: fix to syntax error in multi-part output.

2005-05-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/span-bar.cc (print): sort bar line extents. Fixes problem
	with disappearing span bars when alignAboveContext is active

	* lily/property-iterator.cc (check_grob): use is-grob?
	object-property. Fixes crash-key-sig-font-size.ly. 

2005-05-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/bar-line.cc (print): don't round barlines; this produces
	odd aliasing effects in Acroread.

	* lily/timing-engraver.cc (process_music): robustness fix.

	* lily/context-def.cc (filter_engravers): bugfix.

2005-05-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lilypond.rc.in: Add ly-icon.

	* lily/GNUmakefile: 
	* Documentation/pictures/GNUmakefile (OUT_DIST_FILES): Add ly-icon
	rules.

2005-05-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/stencil-scheme.cc (LY_DEFINE): ly:stencil-in-color

	* ps/music-drawing-routines.ps: 

	* scm/output-ps.scm: remove draw ez_ball.

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	EasyNotation context definition.
